welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value motif
    prodMotif(motif)
              ^Array1:22: error: value lenght is not a member of Array[java.awt.Color]
  for (i <- 0 to motif.lenght - 1) {
                       ^